@@ -1,3 +1,11 @@
+2007-08-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py (configure_pipeline):
+	Fix case where we have an audio only stream.
+	* flumotion/component/dvb/dvb.xml:
+	Should not be synchronised because we don't have a clock yet
+	in the ts demuxer.
+
 2007-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
